# flinx

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: benchmark_galore_memory.py
docs/: index.md
output/checkpoints/13/: _CHECKPOINT_METADATA
output/checkpoints/13/default/: _METADATA  manifest.ocdbt
output/checkpoints/13/default/ocdbt.process_0/: manifest.ocdbt
output/checkpoints/50/: _CHECKPOINT_METADATA
output/checkpoints/50/default/: _sharding  manifest.ocdbt
scripts/: demo_diffusion_noise.py
src/flinx/: __init__.py
src/flinx/models/: base.py  config.py  infer.py
src/flinx/models/llama/: __init__.py  config.py  model.py  tokenizer.py
src/flinx/modules/: attn.py  cache.py  mlp.py  norm.py  peft.py
src/flinx/processor/: tokenizer.py
src/flinx/trainer/: dataset.py  dpo.py  grpo.py  sft.py  trainer.py
src/zlynx/: __init__.py  utils.py
src/zlynx/models/: __init__.py  base.py  config.py  infer.py  outputs.py  utils.py
src/zlynx/models/dit/: config.py  model.py
src/zlynx/models/llama/: config.py  model.py  tokenizer.py
src/zlynx/modules/: __init__.py  cache.py  embed.py  mlp.py  norm.py  rope.py
src/zlynx/processor/: __init__.py  tokenizer.py
src/zlynx/trainer/: __init__.py  dpo.py  dsft.py  grpo.py  loss_fn.py  model.py  optim.py  trainer.py  trainer_config.py  utils.py
tests/: test_dit.py  test_dpo.py  test_galore.py  test_generate.py  test_grpo.py  test_load.py  test_peft.py  test_sft.py  test_trainer.py
tutorials/: 1_advanced_features.md  mnist.md
tutorials/advanced/: 01_peft.md  02_galore.md
tutorials/getting_started/: 01_installation.md  02_your_first_model.md  03_training.md  04_save_and_load.md  05_sharding.md  06_push_to_hub.md
(+2 files in other folders)
