[project]
name = "zlynx"
version = "0.1.2"
description = "Zlynx is a lightweight, highly-customizable deep learning library built on top of JAX and Flax NNX"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Shinapri"},
]
keywords = ["jax", "flax", "deep-learning", "machine-learning", "neural-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "datasets>=4.6.1",
    "flax>=0.12.5",
    "grain>=0.2.16",
    "jax>=0.9.1",
    "kagglehub>=1.0.0",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
    "huggingface-hub>=1.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "twine>=6.0.0",
    "build>=1.2.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
